--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ pandas==2.2.2
 numpy==1.26.4
 python-dotenv==1.0.1
 gradio==4.44.0
+langchain==0.3.0
 langchain-community==0.3.0
 langchain-text-splitters==0.3.0
 langchain-openai==0.2.0
 langchain-chroma==0.1.4
 chromadb==0.4.24
+tqdm==4.66.4
+
